# kde-os-autoinst

./: .arclint  .gitignore  Environment_Variables.md  Jenkinsfile  Jenkinsfile.oem  Jenkinsfile.plasma.test  Jenkinsfile.secureboot  Jenkinsfile.test  README.md  Rakefile  bootstrap.rb  bootstrap_from_ubuntu.sh  contain.rb  junit.rb  run.rb  watch.html
OVMF/: OVMF-pure-efi.fd  OVMF_CODE-pure-efi.fd  OVMF_CODE.fd  SecureBoot.iso
lib/: junit.rb  paths.rb  result.rb  tagger.rb
needler/: CMakeLists.txt
needler/src/: CMakeLists.txt  main.cpp  resources.qrc
needler/src/qml/: PropertyCheckBox.qml  RectangleTwiddler.qml  Selector.qml  Tag.qml  Twiddler.qml  main.qml
neon/: main.pm
neon/data/: 99allow-downgrades  README.md  add_testing_repo.rb  apt_mirror.rb  basetest_setup.rb  calamares_partitioning_only.rb  chromium_install.rb  early_first_start.rb  enable_qdebug.rb  geoip_service.rb  geoip_service_calamares.rb  grub_toggle_hide.rb  install_all.rb  permissions_check.rb  qt_compat_install.rb  setup_journald_ttyS1.rb  snapd_disable.rb  uefi_boot.rb  upgrade_bionic.rb  upgrade_bionic_qtlogging.ini
neon/lib/: basetest_neon.pm  distribution_neon.pm  livetest_neon.pm
neon/needles/: breeze-close.json  calamares-installer-disk-20200504.json  calamares-installer-disk-erase-selected-20200504.json  calamares-installer-icon-20200430.json  calamares-installer-install-nohighlight-20200504.json  calamares-installer-keyboard-20200504.json  calamares-installer-next-nohighlight-20200430.json  desktop.json  (+41 more)
test/: junit_test.rb  needle_test.rb  result_test.rb  test_helper.rb
(+397 files in other folders)
